# cw-assessment

./: .gitignore  Cargo.toml  README.md
.cargo/.circleci/: config.yml
artifacts/: checksums.txt  cw_assessment.wasm  cw_test.wasm  interview_challenge.wasm
examples/: schema.rs
integration-test/: constant.ts  index.ts  package-lock.json  package.json
schema/: execute_msg.json  exist_response.json  instantiate_msg.json  query_msg.json  users_response.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
