[package]
name = "cw-assessment"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "0.16.0"
cosmwasm-storage = "0.16.0"
schemars = "0.8.3"
thiserror = "1.0.26"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-vm = "0.16.0"
